[package]
name = "word"
version = "0.5.0"
authors = ["Pohl Longsine <pohl.longsine@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
#wordsapi = { path = "../wordsapi" }
wordsapi = { git = "https://github.com/pohl/wordsapi.git" }
structopt = "0.2"
config = "0.9"
serde_json = "1.0"
itertools = "0.8"
dirs = "1.0"
stderrlog = "0.4.1"
log = "0.4"