[package]
name = "word"
version = "0.6.0"
authors = ["Pohl Longsine <pohl.longsine@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
wordsapi = { path = "../wordsapi" }
#wordsapi = { git = "https://github.com/pohl/wordsapi.git" }
structopt = "0.3.3"
config = "0.9.3"
serde_json = "1.0.41"
itertools = "0.8.0"
dirs = "2.0.2"
stderrlog = "0.4.1"
log = "0.4.8"
